# fontname

./: .gitignore  LICENSE.txt  README.rst  fontname.py  pyproject.toml  setup.py
tests/: test_main.py
